--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,6 +8,8 @@ package:
 source:
   git_url: https://github.com/ochubar/{{ name }}
   git_rev: d6c5f7ebfea3954e0863755209b4b249355c59c3
+  patches:
+    - compilers.patch
 
 build:
   number: 0
